# esp32-tensorflow-microspeech

./: README.md  custom.csv  platformio.ini
lib/: CMakeLists.txt
lib/tfmicro/flatbuffers/: base.h
lib/tfmicro/tools/: kiss_fftr.h
src/: CMakeLists.txt  command_responder.cc  command_responder.h  feature_provider.cc  main.cc  main_functions.h  recognize_commands.cc  recognize_commands.h
src/esp/: audio_provider.cc  main.xx  ringbuf.c
src/micro_features/: micro_features_generator.cc  model.cc
